--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
+
         android:theme="@style/Theme.TheMathGame"
         tools:targetApi="31">
         <activity
+            android:screenOrientation="portrait"
             android:name="com.example.thindie.themathgame.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
